--- a/report/main.tex
+++ b/report/main.tex
@@ -817,7 +817,7 @@ In our first class meeting, we sketched out a proof of Cantor's theorem. If you'
 Suppose you try to pair off the elements of $\mathbb{N}$ with the subsets of $\mathbb{N}$. Show that, no matter how you do this, there's always at least one set $X \subseteq \mathbb{N}$ that differs in infinitely many positions from each of the paired sets. Justify your answer, but no formal proof is necessary.
 
 \begin{shaded}
-Write your answer here.
+Write your answer here. TEST
 \end{shaded}
 
 \end{document}
