Added datboi to reference.

--- a/reference/main.tex
+++ b/reference/main.tex
@@ -54,7 +54,7 @@ But first my hunger pains are stickin’ like duct tape.\\
 Let’s hit up Magnolia and mack on some cupcakes.\\
 (No doubt that bakery’s got all da bomb frostings)
 
-\fig{hello.png}{0.2}{hello}
+\fig{Fig/datboi.png}{0.2}{o shit waddup?}
 
 \begin{center}
         \begin{tikzpicture}[join=round]
